@@ -1,3 +1,7 @@
+2017-01-07  Stanislas Rolland  <typo3(arobas)sjbr.ca>
+
+	* Cleanup extension configuration files
+
 2017-01-06  Stanislas Rolland  <typo3(arobas)sjbr.ca>
 
 	* Resolves #79187: Use TYPO3 8 DB API
